--- a/main.ipynb
+++ b/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "        [-0.89442719,  0.        ,  0.        ,  0.        ,  0.4472136 ]]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,68 +54,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 5 is different from 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-106-6b3efa0ccc4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mV\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mU\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mSigma\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 5 is different from 4)"
+     ]
+    }
+   ],
+   "source": [
+    "U, Sigma, V = np.linalg.svd(A)\n",
+    "U @ Sigma @ V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "def custom_SVD(M):\n",
     "    MTM = np.transpose(M) @ M\n",
     "    MMT = M @ np.transpose(M)\n",
-    "    print(MTM)\n",
-    "    print(MMT)\n",
-    "    print(np.sort(np.linalg.eigvals(MTM))[::-1])"
+    "    # m x n  \n",
+    "    if (M.shape[0] < M.shape[1]):\n",
+    "        # m < n\n",
+    "        eigenvalues, eigenvectors = np.linalg.eig(MMT)\n",
+    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "        indexes = np.argsort(eigenvalues)[::-1]\n",
+    "        Sigma = np.sqrt(sort_eigenvalues)\n",
+    "        U = eigenvectors[:,indexes]\n",
+    "        #search V\n",
+    "        eigenvalues, eigenvectors = np.linalg.eig(MTM)\n",
+    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "        indexes = np.argsort(eigenvalues)[::-1]\n",
+    "        V = eigenvectors[:,indexes]\n",
+    "    else:\n",
+    "        # n <= m\n",
+    "        eigenvalues, eigenvectors = np.linalg.eig(MTM)\n",
+    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "        indexes = np.argsort(eigenvalues)[::-1]\n",
+    "        Sigma = np.sqrt(sort_eigenvalues)\n",
+    "        V = eigenvectors[:,indexes]\n",
+    "        # search U \n",
+    "        eigenvalues, eigenvectors = np.linalg.eig(MMT)\n",
+    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "        indexes = np.argsort(eigenvalues)[::-1]\n",
+    "        U = eigenvectors[:,indexes]\n",
+    "    return U, Sigma, V\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U, Sigma, V = custom_SVD(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getFullSigma(Sigma, A):\n",
+    "    result = np.zeros(A.shape)\n",
+    "    for i in range(np.min(A.shape)):\n",
+    "        result[i][i] = Sigma[i]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.        , 0.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 3.        , 0.        , 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 2.23606798, 0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 0.        ]])"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFullSigma(Sigma,A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$U * \\sigma $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.,  0.,  0.,  0., -2.],\n",
+       "       [ 0.,  0.,  3.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  4.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U @ getFullSigma(Sigma,A) @ V.transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Res = np.diag(Sigma)\n",
+    "Res.resize(A.shape)\n",
+    "np.zeros(A.shape())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1  0  0  0  2]\n",
-      " [ 0 16  0  0  0]\n",
-      " [ 0  0  9  0  0]\n",
-      " [ 0  0  0  0  0]\n",
-      " [ 2  0  0  0  4]]\n",
-      "[[ 5  0  0  0]\n",
-      " [ 0  9  0  0]\n",
-      " [ 0  0  0  0]\n",
-      " [ 0  0  0 16]]\n",
-      "[16.  9.  5.  0.  0.]\n"
+      "[[4.         0.         0.         0.         0.        ]\n",
+      " [3.         0.         0.         0.         0.        ]\n",
+      " [2.23606798 0.         0.         0.         0.        ]\n",
+      " [0.         0.         0.         0.         0.        ]]\n"
      ]
     }
    ],
    "source": [
-    "custom_SVD(A)"
+    "print(Res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([1,3,5,2,7])\n",
+    "ind = np.argsort(x)[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\"unzip\" не является внутренней или внешней\n",
-      "командой, исполняемой программой или пакетным файлом.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([7, 5, 3, 2, 1])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "x[ind]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
