--- a/main.ipynb
+++ b/main.ipynb
@@ -54,67 +54,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 5 is different from 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-106-6b3efa0ccc4d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSigma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mV\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mU\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mSigma\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 5 is different from 4)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "U, Sigma, V = np.linalg.svd(A)\n",
-    "U @ Sigma @ V"
+    "U, Sigma, V = np.linalg.svd(A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def get_sigma_matrix(M):\n",
+    "    '''\n",
+    "    returns sigma and \n",
+    "    1) in case MMT -> U\n",
+    "    2) in case MTM -> V\n",
+    "    '''\n",
+    "    eigenvalues, eigenvectors = np.linalg.eig(M)\n",
+    "    sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
+    "    indexes = np.argsort(eigenvalues)[::-1]\n",
+    "    Sigma = np.sqrt(sort_eigenvalues)\n",
+    "    matrix = eigenvectors[:,indexes]\n",
+    "    return Sigma, matrix\n",
     "def custom_SVD(M):\n",
+    "    '''\n",
+    "    returns U, Sigma(vector), V^T\n",
+    "    '''\n",
     "    MTM = np.transpose(M) @ M\n",
     "    MMT = M @ np.transpose(M)\n",
     "    # m x n  \n",
     "    if (M.shape[0] < M.shape[1]):\n",
     "        # m < n\n",
-    "        eigenvalues, eigenvectors = np.linalg.eig(MMT)\n",
-    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
-    "        indexes = np.argsort(eigenvalues)[::-1]\n",
-    "        Sigma = np.sqrt(sort_eigenvalues)\n",
-    "        U = eigenvectors[:,indexes]\n",
+    "        Sigma, U = get_sigma_matrix(MMT)\n",
     "        #search V\n",
-    "        eigenvalues, eigenvectors = np.linalg.eig(MTM)\n",
-    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
-    "        indexes = np.argsort(eigenvalues)[::-1]\n",
-    "        V = eigenvectors[:,indexes]\n",
+    "        _, V = get_sigma_matrix(MTM)\n",
     "    else:\n",
     "        # n <= m\n",
-    "        eigenvalues, eigenvectors = np.linalg.eig(MTM)\n",
-    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
-    "        indexes = np.argsort(eigenvalues)[::-1]\n",
-    "        Sigma = np.sqrt(sort_eigenvalues)\n",
-    "        V = eigenvectors[:,indexes]\n",
+    "        Sigma, V = get_sigma_matrix(MTM)\n",
     "        # search U \n",
-    "        eigenvalues, eigenvectors = np.linalg.eig(MMT)\n",
-    "        sort_eigenvalues = np.sort(eigenvalues)[::-1]\n",
-    "        indexes = np.argsort(eigenvalues)[::-1]\n",
-    "        U = eigenvectors[:,indexes]\n",
-    "    return U, Sigma, V\n",
+    "        _, U = get_sigma_matrix(MMT) \n",
+    "    return U, Sigma, V.transpose()\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getFullSigma(Sigma, A):\n",
+    "def get_full_sigma(Sigma, A):\n",
     "    result = np.zeros(A.shape)\n",
     "    for i in range(np.min(A.shape)):\n",
     "        result[i][i] = Sigma[i]\n",
@@ -136,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -148,25 +137,54 @@
        "       [0.        , 0.        , 0.        , 0.        , 0.        ]])"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getFullSigma(Sigma,A)"
+    "get_full_sigma(Sigma,A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0., 0., 1., 0.],\n",
+       "        [0., 1., 0., 0.],\n",
+       "        [0., 0., 0., 1.],\n",
+       "        [1., 0., 0., 0.]]),\n",
+       " array([4.        , 3.        , 2.23606798, 0.        ]),\n",
+       " array([[ 0.        ,  1.        ,  0.        ,  0.        ,  0.        ],\n",
+       "        [ 0.        ,  0.        ,  1.        ,  0.        ,  0.        ],\n",
+       "        [-0.4472136 ,  0.        ,  0.        ,  0.        , -0.89442719],\n",
+       "        [ 0.        ,  0.        ,  0.        ,  1.        ,  0.        ],\n",
+       "        [-0.89442719,  0.        ,  0.        ,  0.        ,  0.4472136 ]]))"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custom_SVD(A)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$U * \\sigma $"
+    "$A = U * \\Sigma * V^{T} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -178,45 +196,195 @@
        "       [ 0.,  4.,  0.,  0.,  0.]])"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "U @ getFullSigma(Sigma,A) @ V.transpose()"
+    "U @ get_full_sigma(Sigma, A) @ V"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Res = np.diag(Sigma)\n",
-    "Res.resize(A.shape)\n",
-    "np.zeros(A.shape())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[4.         0.         0.         0.         0.        ]\n",
-      " [3.         0.         0.         0.         0.        ]\n",
-      " [2.23606798 0.         0.         0.         0.        ]\n",
-      " [0.         0.         0.         0.         0.        ]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([[ 0.70710678, -0.70710678],\n",
+       "        [ 0.70710678,  0.70710678]]),\n",
+       " array([1.73205081, 1.        ]),\n",
+       " array([[ 4.08248290e-01,  4.08248290e-01,  8.16496581e-01],\n",
+       "        [-7.07106781e-01,  7.07106781e-01,  2.78178085e-16],\n",
+       "        [-5.77350269e-01, -5.77350269e-01,  5.77350269e-01]]))"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(Res)"
+    "B = np.array([[1,0,1],[0,1,1]])\n",
+    "U, sigma, V  = np.linalg.svd(B)\n",
+    "np.linalg.svd(B)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00, -1.11022302e-16,  1.00000000e+00],\n",
+       "       [ 0.00000000e+00,  1.00000000e+00,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U @ getFullSigma(sigma, B) @ V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-245-a79864595b5b>:10: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  Sigma = np.sqrt(sort_eigenvalues)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.70710678, -0.70710678],\n",
+       "        [ 0.70710678,  0.70710678]]),\n",
+       " array([1.73205081, 1.        ]),\n",
+       " array([[-4.08248290e-01, -4.08248290e-01, -8.16496581e-01],\n",
+       "        [-7.07106781e-01,  7.07106781e-01, -2.61239546e-16],\n",
+       "        [-5.77350269e-01, -5.77350269e-01,  5.77350269e-01]]))"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U, sigma, V  = custom_SVD(B)\n",
+    "custom_SVD(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.77555756e-16, -1.00000000e+00, -1.00000000e+00],\n",
+       "       [-1.00000000e+00, -1.11022302e-16, -1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 255,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U @ getFullSigma(sigma, B) @ V"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = Image.open('./vggface2_test/vggface2_test/test/n000001/0001_01.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr =np.array(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "U1, sigma, V = np.linalg.svd(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
