--- a/main.ipynb
+++ b/main.ipynb
@@ -769,12 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 505,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1112,6 +1107,15 @@
    ],
    "source": [
     "sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.empty()"
    ]
   },
   {
